[gd_scene load_steps=13 format=3 uid="uid://7tujbg5x1mob"]

[ext_resource type="Script" path="res://FlatLighting/FlatLightingTest02.gd" id="1_pr3wy"]
[ext_resource type="Script" path="res://FlatLighting/FlatLighting.gd" id="2_2sq6c"]
[ext_resource type="Material" uid="uid://cis7bs7g7nnoh" path="res://FlatLighting/ShadowOverlay.tres" id="4_bvsac"]
[ext_resource type="PackedScene" uid="uid://dycgykhwr6a1q" path="res://FlatLighting/FlatLight.tscn" id="5_eleoj"]
[ext_resource type="Texture2D" uid="uid://db07rs12wvvja" path="res://FlatLighting/TestTileset.png" id="5_o0utj"]
[ext_resource type="Script" path="res://Scripts/Tools/DebugDraw.gd" id="7_rrjht"]

[sub_resource type="OpenSimplexNoise" id="OpenSimplexNoise_dy2ff"]

[sub_resource type="NoiseTexture" id="NoiseTexture_wj114"]
width = 16
height = 16
noise = SubResource( "OpenSimplexNoise_dy2ff" )

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t3e3m"]
texture = ExtResource( "5_o0utj" )
texture_region_size = Vector2i(64, 64)
use_texture_padding = false
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_bjlgu"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource( "TileSetAtlasSource_t3e3m" )

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qier2"]
texture = ExtResource( "5_o0utj" )
texture_region_size = Vector2i(64, 64)
use_texture_padding = false
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_2bpib"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource( "TileSetAtlasSource_qier2" )

[node name="FlatLightingTest02" type="Node2D"]
script = ExtResource( "1_pr3wy" )

[node name="FlatLighting" type="Node2D" parent="."]
script = ExtResource( "2_2sq6c" )
_shadow_viewport_path = NodePath("../ShadowViewport")
_shadow_camera_path = NodePath("../ShadowViewport/ShadowCamera")
_shadow_overlay_path = NodePath("../ShadowOverlay")
_camera_path = NodePath("../Camera")

[node name="ShadowViewport" type="SubViewport" parent="."]
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="ShadowCamera" type="Camera3D" parent="ShadowViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
projection = 1
current = true
size = 1080.0
far = 100.0

[node name="CenterQuad" type="Sprite2D" parent="."]
texture = SubResource( "NoiseTexture_wj114" )

[node name="FlatLight" parent="." instance=ExtResource( "5_eleoj" )]

[node name="TileMapFloor" type="TileMap" parent="."]
show_behind_parent = true
tile_set = SubResource( "TileSet_bjlgu" )
format = 2
layer_0/tile_data = PackedInt32Array(-524304, 0, 0, -458768, 0, 0, -393232, 0, 0, -327696, 0, 0, -262160, 0, 0, -196624, 0, 0, -131088, 0, 0, -65552, 0, 0, -16, 0, 0, 65520, 0, 0, 131056, 0, 0, 196592, 0, 0, 262128, 0, 0, 327664, 0, 0, 393200, 0, 0, 458736, 0, 0, 524272, 0, 0, 589808, 0, 0, -524303, 0, 0, -458767, 0, 0, -393231, 0, 0, -327695, 0, 0, -262159, 0, 0, -196623, 0, 0, -131087, 0, 0, -65551, 0, 0, -15, 0, 0, 65521, 0, 0, 131057, 0, 0, 196593, 0, 0, 262129, 0, 0, 327665, 0, 0, 393201, 0, 0, 458737, 0, 0, 524273, 0, 0, 589809, 0, 0, -524302, 0, 0, -458766, 0, 0, -393230, 0, 0, -327694, 0, 0, -262158, 0, 0, -196622, 0, 0, -131086, 0, 0, -65550, 0, 0, -14, 0, 0, 65522, 0, 0, 131058, 0, 0, 196594, 0, 0, 262130, 0, 0, 327666, 0, 0, 393202, 0, 0, 458738, 0, 0, 524274, 0, 0, 589810, 0, 0, -524301, 0, 0, -458765, 0, 0, -393229, 0, 0, -327693, 0, 0, -262157, 0, 0, -196621, 0, 0, -131085, 0, 0, -65549, 0, 0, -13, 0, 0, 65523, 0, 0, 131059, 0, 0, 196595, 0, 0, 262131, 0, 0, 327667, 0, 0, 393203, 0, 0, 458739, 0, 0, 524275, 0, 0, 589811, 0, 0, -524300, 0, 0, -458764, 0, 0, -393228, 0, 0, -327692, 0, 0, -262156, 0, 0, -196620, 0, 0, -131084, 0, 0, -65548, 0, 0, -12, 0, 0, 65524, 0, 0, 131060, 0, 0, 196596, 0, 0, 262132, 0, 0, 327668, 0, 0, 393204, 0, 0, 458740, 0, 0, 524276, 0, 0, 589812, 0, 0, -524299, 0, 0, -458763, 0, 0, -393227, 0, 0, -327691, 0, 0, -262155, 0, 0, -196619, 0, 0, -131083, 0, 0, -65547, 0, 0, -11, 0, 0, 65525, 0, 0, 131061, 0, 0, 196597, 0, 0, 262133, 0, 0, 327669, 0, 0, 393205, 0, 0, 458741, 0, 0, 524277, 0, 0, 589813, 0, 0, -524298, 0, 0, -458762, 0, 0, -393226, 0, 0, -327690, 0, 0, -262154, 0, 0, -196618, 0, 0, -131082, 0, 0, -65546, 0, 0, -10, 0, 0, 65526, 0, 0, 131062, 0, 0, 196598, 0, 0, 262134, 0, 0, 327670, 0, 0, 393206, 0, 0, 458742, 0, 0, 524278, 0, 0, 589814, 0, 0, -524297, 0, 0, -458761, 0, 0, -393225, 0, 0, -327689, 0, 0, -262153, 0, 0, -196617, 0, 0, -131081, 0, 0, -65545, 0, 0, -9, 0, 0, 65527, 0, 0, 131063, 0, 0, 196599, 0, 0, 262135, 0, 0, 327671, 0, 0, 393207, 0, 0, 458743, 0, 0, 524279, 0, 0, 589815, 0, 0, -524296, 0, 0, -458760, 0, 0, -393224, 0, 0, -327688, 0, 0, -262152, 0, 0, -196616, 0, 0, -131080, 0, 0, -65544, 0, 0, -8, 0, 0, 65528, 0, 0, 131064, 0, 0, 196600, 0, 0, 262136, 0, 0, 327672, 0, 0, 393208, 0, 0, 458744, 0, 0, 524280, 0, 0, 589816, 0, 0, -524295, 0, 0, -458759, 0, 0, -393223, 0, 0, -327687, 0, 0, -262151, 0, 0, -196615, 0, 0, -131079, 0, 0, -65543, 0, 0, -7, 0, 0, 65529, 0, 0, 131065, 0, 0, 196601, 0, 0, 262137, 0, 0, 327673, 0, 0, 393209, 0, 0, 458745, 0, 0, 524281, 0, 0, 589817, 0, 0, -524294, 0, 0, -458758, 0, 0, -393222, 0, 0, -327686, 0, 0, -262150, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, 65530, 0, 0, 131066, 0, 0, 196602, 0, 0, 262138, 0, 0, 327674, 0, 0, 393210, 0, 0, 458746, 0, 0, 524282, 0, 0, 589818, 0, 0, -524293, 0, 0, -458757, 0, 0, -393221, 0, 0, -327685, 0, 0, -262149, 0, 0, -196613, 0, 0, -131077, 0, 0, -65541, 0, 0, -5, 0, 0, 65531, 0, 0, 131067, 0, 0, 196603, 0, 0, 262139, 0, 0, 327675, 0, 0, 393211, 0, 0, 458747, 0, 0, 524283, 0, 0, 589819, 0, 0, -524292, 0, 0, -458756, 0, 0, -393220, 0, 0, -327684, 0, 0, -262148, 0, 0, -196612, 0, 0, -131076, 0, 0, -65540, 0, 0, -4, 0, 0, 65532, 0, 0, 131068, 0, 0, 196604, 0, 0, 262140, 0, 0, 327676, 0, 0, 393212, 0, 0, 458748, 0, 0, 524284, 0, 0, 589820, 0, 0, -524291, 0, 0, -458755, 0, 0, -393219, 0, 0, -327683, 0, 0, -262147, 0, 0, -196611, 0, 0, -131075, 0, 0, -65539, 0, 0, -3, 0, 0, 65533, 0, 0, 131069, 0, 0, 196605, 0, 0, 262141, 0, 0, 327677, 0, 0, 393213, 0, 0, 458749, 0, 0, 524285, 0, 0, 589821, 0, 0, -524290, 0, 0, -458754, 0, 0, -393218, 0, 0, -327682, 0, 0, -262146, 0, 0, -196610, 0, 0, -131074, 0, 0, -65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 0, 0, 458750, 0, 0, 524286, 0, 0, 589822, 0, 0, -524289, 0, 0, -458753, 0, 0, -393217, 0, 0, -327681, 0, 0, -262145, 0, 0, -196609, 0, 0, -131073, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, -589824, 0, 0, -524288, 0, 0, -458752, 0, 0, -393216, 0, 0, -327680, 0, 0, -262144, 0, 0, -196608, 0, 0, -131072, 0, 0, -65536, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, -589823, 0, 0, -524287, 0, 0, -458751, 0, 0, -393215, 0, 0, -327679, 0, 0, -262143, 0, 0, -196607, 0, 0, -131071, 0, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, -589822, 0, 0, -524286, 0, 0, -458750, 0, 0, -393214, 0, 0, -327678, 0, 0, -262142, 0, 0, -196606, 0, 0, -131070, 0, 0, -65534, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, -589821, 0, 0, -524285, 0, 0, -458749, 0, 0, -393213, 0, 0, -327677, 0, 0, -262141, 0, 0, -196605, 0, 0, -131069, 0, 0, -65533, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, -589820, 0, 0, -524284, 0, 0, -458748, 0, 0, -393212, 0, 0, -327676, 0, 0, -262140, 0, 0, -196604, 0, 0, -131068, 0, 0, -65532, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, -589819, 0, 0, -524283, 0, 0, -458747, 0, 0, -393211, 0, 0, -327675, 0, 0, -262139, 0, 0, -196603, 0, 0, -131067, 0, 0, -65531, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, -589818, 0, 0, -524282, 0, 0, -458746, 0, 0, -393210, 0, 0, -327674, 0, 0, -262138, 0, 0, -196602, 0, 0, -131066, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, -589817, 0, 0, -524281, 0, 0, -458745, 0, 0, -393209, 0, 0, -327673, 0, 0, -262137, 0, 0, -196601, 0, 0, -131065, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, -589816, 0, 0, -524280, 0, 0, -458744, 0, 0, -393208, 0, 0, -327672, 0, 0, -262136, 0, 0, -196600, 0, 0, -131064, 0, 0, -65528, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, -589815, 0, 0, -524279, 0, 0, -458743, 0, 0, -393207, 0, 0, -327671, 0, 0, -262135, 0, 0, -196599, 0, 0, -131063, 0, 0, -65527, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, -589814, 0, 0, -524278, 0, 0, -458742, 0, 0, -393206, 0, 0, -327670, 0, 0, -262134, 0, 0, -196598, 0, 0, -131062, 0, 0, -65526, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, -589813, 0, 0, -524277, 0, 0, -458741, 0, 0, -393205, 0, 0, -327669, 0, 0, -262133, 0, 0, -196597, 0, 0, -131061, 0, 0, -65525, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, -589812, 0, 0, -524276, 0, 0, -458740, 0, 0, -393204, 0, 0, -327668, 0, 0, -262132, 0, 0, -196596, 0, 0, -131060, 0, 0, -65524, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, -589811, 0, 0, -524275, 0, 0, -458739, 0, 0, -393203, 0, 0, -327667, 0, 0, -262131, 0, 0, -196595, 0, 0, -131059, 0, 0, -65523, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, -589810, 0, 0, -524274, 0, 0, -458738, 0, 0, -393202, 0, 0, -327666, 0, 0, -262130, 0, 0, -196594, 0, 0, -131058, 0, 0, -65522, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, -589809, 0, 0, -524273, 0, 0, -458737, 0, 0, -393201, 0, 0, -327665, 0, 0, -262129, 0, 0, -196593, 0, 0, -131057, 0, 0, -65521, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0)

[node name="TileMapCeiling" type="TileMap" parent="."]
show_behind_parent = true
tile_set = SubResource( "TileSet_2bpib" )
format = 2
layer_0/tile_data = PackedInt32Array(-524304, 65536, 0, -458768, 65536, 0, -393232, 65536, 0, -327696, 65536, 0, -262160, 65536, 0, -196624, 65536, 0, -131088, 65536, 0, -65552, 65536, 0, -16, 65536, 0, 65520, 65536, 0, 131056, 65536, 0, 196592, 65536, 0, 262128, 65536, 0, 327664, 65536, 0, 393200, 65536, 0, 458736, 65536, 0, 524272, 65536, 0, 589808, 65536, 0, -524303, 65536, 0, -458767, 65536, 0, -393231, 65536, 0, -327695, 65536, 0, -262159, 65536, 0, -196623, 65536, 0, -131087, 65536, 0, -65551, 65536, 0, -15, 65536, 0, 65521, 65536, 0, 131057, 65536, 0, 196593, 65536, 0, 262129, 65536, 0, 327665, 65536, 0, 393201, 65536, 0, 458737, 65536, 0, 524273, 65536, 0, 589809, 65536, 0, -524302, 65536, 0, -458766, 65536, 0, 524274, 65536, 0, 589810, 65536, 0, -524301, 65536, 0, -458765, 65536, 0, -327693, 65536, 0, -262157, 65536, 0, 65523, 65536, 0, 131059, 65536, 0, 196595, 65536, 0, 262131, 65536, 0, 393203, 65536, 0, 524275, 65536, 0, 589811, 65536, 0, -524300, 65536, 0, -458764, 65536, 0, -196620, 65536, 0, -65548, 65536, 0, 262132, 65536, 0, 393204, 65536, 0, 524276, 65536, 0, 589812, 65536, 0, -524299, 65536, 0, -458763, 65536, 0, -393227, 65536, 0, -131083, 65536, 0, -65547, 65536, 0, 65525, 65536, 0, 131061, 65536, 0, 196597, 65536, 0, 262133, 65536, 0, 393205, 65536, 0, 524277, 65536, 0, 589813, 65536, 0, -524298, 65536, 0, -458762, 65536, 0, -131082, 65536, 0, -65546, 65536, 0, 65526, 65536, 0, 131062, 65536, 0, 196598, 65536, 0, 393206, 65536, 0, 524278, 65536, 0, 589814, 65536, 0, -524297, 65536, 0, -458761, 65536, 0, -262153, 65536, 0, -131081, 65536, 0, -65545, 65536, 0, -9, 65536, 0, 131063, 65536, 0, 196599, 65536, 0, 262135, 65536, 0, 393207, 65536, 0, 524279, 65536, 0, 589815, 65536, 0, -524296, 65536, 0, -458760, 65536, 0, -327688, 65536, 0, -196616, 65536, 0, -65544, 65536, 0, -8, 65536, 0, 393208, 65536, 0, 524280, 65536, 0, 589816, 65536, 0, -524295, 65536, 0, -458759, 65536, 0, -262151, 65536, 0, 131065, 65536, 0, 196601, 65536, 0, 262137, 65536, 0, 393209, 65536, 0, 524281, 65536, 0, 589817, 65536, 0, -524294, 65536, 0, -458758, 65536, 0, -6, 65536, 0, 65530, 65536, 0, 131066, 65536, 0, 196602, 65536, 0, 393210, 65536, 0, 524282, 65536, 0, 589818, 65536, 0, -524293, 65536, 0, -458757, 65536, 0, -5, 65536, 0, 65531, 65536, 0, 131067, 65536, 0, 196603, 65536, 0, 327675, 65536, 0, 393211, 65536, 0, 524283, 65536, 0, 589819, 65536, 0, -524292, 65536, 0, -458756, 65536, 0, -327684, 65536, 0, -262148, 65536, 0, -196612, 65536, 0, -131076, 65536, 0, 327676, 65536, 0, 393212, 65536, 0, 524284, 65536, 0, 589820, 65536, 0, -524291, 65536, 0, -458755, 65536, 0, -327683, 65536, 0, -131075, 65536, 0, -3, 65536, 0, 65533, 65536, 0, 327677, 65536, 0, 524285, 65536, 0, 589821, 65536, 0, -524290, 65536, 0, -458754, 65536, 0, -327682, 65536, 0, -262146, 65536, 0, -196610, 65536, 0, -131074, 65536, 0, -2, 65536, 0, 65534, 65536, 0, 131070, 65536, 0, 196606, 65536, 0, 327678, 65536, 0, 458750, 65536, 0, 524286, 65536, 0, 589822, 65536, 0, -524289, 65536, 0, -458753, 65536, 0, 65535, 65536, 0, 131071, 65536, 0, 196607, 65536, 0, 327679, 65536, 0, 458751, 65536, 0, 524287, 65536, 0, 589823, 65536, 0, -589824, 65536, 0, -524288, 65536, 0, -196608, 65536, 0, -131072, 65536, 0, 0, 65536, 0, 65536, 65536, 0, 262144, 65536, 0, 458752, 65536, 0, 524288, 65536, 0, -589823, 65536, 0, -524287, 65536, 0, -196607, 65536, 0, 458753, 65536, 0, 524289, 65536, 0, -589822, 65536, 0, -524286, 65536, 0, -458750, 65536, 0, -65534, 65536, 0, 2, 65536, 0, 65538, 65536, 0, 196610, 65536, 0, 262146, 65536, 0, 327682, 65536, 0, 393218, 65536, 0, 458754, 65536, 0, 524290, 65536, 0, -589821, 65536, 0, -524285, 65536, 0, -262141, 65536, 0, -196605, 65536, 0, -131069, 65536, 0, -65533, 65536, 0, 65539, 65536, 0, 196611, 65536, 0, 262147, 65536, 0, 327683, 65536, 0, 458755, 65536, 0, 524291, 65536, 0, -589820, 65536, 0, -524284, 65536, 0, -393212, 65536, 0, -262140, 65536, 0, -196604, 65536, 0, -65532, 65536, 0, 65540, 65536, 0, 327684, 65536, 0, 458756, 65536, 0, 524292, 65536, 0, -589819, 65536, 0, -524283, 65536, 0, -393211, 65536, 0, -262139, 65536, 0, -196603, 65536, 0, -65531, 65536, 0, 5, 65536, 0, 65541, 65536, 0, 196613, 65536, 0, 458757, 65536, 0, 524293, 65536, 0, -589818, 65536, 0, -524282, 65536, 0, -393210, 65536, 0, -196602, 65536, 0, -131066, 65536, 0, -65530, 65536, 0, 6, 65536, 0, 131078, 65536, 0, 196614, 65536, 0, 262150, 65536, 0, 327686, 65536, 0, 458758, 65536, 0, 524294, 65536, 0, -589817, 65536, 0, -524281, 65536, 0, -393209, 65536, 0, -196601, 65536, 0, -65529, 65536, 0, 131079, 65536, 0, 327687, 65536, 0, 458759, 65536, 0, 524295, 65536, 0, -589816, 65536, 0, -524280, 65536, 0, -393208, 65536, 0, -196600, 65536, 0, -131064, 65536, 0, -65528, 65536, 0, 8, 65536, 0, 65544, 65536, 0, 131080, 65536, 0, 327688, 65536, 0, 458760, 65536, 0, 524296, 65536, 0, -589815, 65536, 0, -524279, 65536, 0, -393207, 65536, 0, 9, 65536, 0, 65545, 65536, 0, 131081, 65536, 0, 196617, 65536, 0, 327689, 65536, 0, 458761, 65536, 0, 524297, 65536, 0, -589814, 65536, 0, -524278, 65536, 0, -196598, 65536, 0, -131062, 65536, 0, -65526, 65536, 0, 65546, 65536, 0, 196618, 65536, 0, 327690, 65536, 0, 458762, 65536, 0, 524298, 65536, 0, -589813, 65536, 0, -524277, 65536, 0, -393205, 65536, 0, -196597, 65536, 0, 65547, 65536, 0, 131083, 65536, 0, 196619, 65536, 0, 327691, 65536, 0, 458763, 65536, 0, 524299, 65536, 0, -589812, 65536, 0, -524276, 65536, 0, -393204, 65536, 0, -196596, 65536, 0, 65548, 65536, 0, 131084, 65536, 0, 196620, 65536, 0, 327692, 65536, 0, 458764, 65536, 0, 524300, 65536, 0, -589811, 65536, 0, -524275, 65536, 0, -393203, 65536, 0, -327667, 65536, 0, -262131, 65536, 0, -196595, 65536, 0, -131059, 65536, 0, -65523, 65536, 0, 13, 65536, 0, 65549, 65536, 0, 131085, 65536, 0, 196621, 65536, 0, 262157, 65536, 0, 327693, 65536, 0, 458765, 65536, 0, 524301, 65536, 0, -589810, 65536, 0, -524274, 65536, 0, 458766, 65536, 0, 524302, 65536, 0, -589809, 65536, 0, -524273, 65536, 0, -458737, 65536, 0, -393201, 65536, 0, -327665, 65536, 0, -262129, 65536, 0, -196593, 65536, 0, -131057, 65536, 0, -65521, 65536, 0, 15, 65536, 0, 65551, 65536, 0, 131087, 65536, 0, 196623, 65536, 0, 262159, 65536, 0, 327695, 65536, 0, 393231, 65536, 0, 458767, 65536, 0, 524303, 65536, 0)

[node name="ShadowOverlay" type="Sprite2D" parent="."]
material = ExtResource( "4_bvsac" )

[node name="Camera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 0.5
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="DebugDraw" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.341176)
script = ExtResource( "7_rrjht" )
